# quickbooks_desktop

./: .gitignore  LICENSE  README.md  __init__.py  setup.cfg  setup.py
burn/: currency_transfer_to_new_file.py  delete_transactions.py  one_off.py  passes.py  phone_notifications.py  q2q.py  test.xml
core/: actions.py  base.py  components.py  data.py  mixins.py  processing_xml.py  query_fields.py  query_mixins.py  quickbooks_desktop.py  resources_dict.py  session_manager.py  special_fields.py  test_session_manager.py  xml_conversion.py
core/list_objects/: __init__.py  qb_account.py
core/tests/: test_base.py  test_mixins.py  test_quickbooks_desktop.py  test_session_manager.py  test_special_fields.py
core/transaction_objects/: ARRefundCreditCard.py
lists/: Account.py  Customer.py  account.py  account_open_ai_complex.py  accounts.py  accounts_marshmallow.py  accounts_old.py  accounts_open_ai_simple.py  accounts_pydantic.py  other_lists.py
lists/tests/: test_account.py  test_account_old.py  test_account_open_ai_complex.py  test_accounts.py
src/quickbooks_desktop/: conversions.py  data_ext.py  qb_common_fields_lists_dicts.py  qb_contact_common_fields.py  qb_mixin.py  qb_other_common_fields.py  qb_query_common_fields.py  (+4 more)
tests/: create_full_request_tests.py  quickbooks_desktop_tests.py  quickbooks_desktop_w_open_file_tests.py  utilities_test.py
transactions/: ARRefundCreditCard.py  TimeTracking.py
utility/: __init__.py  osr_cleanup.py  string_parsing.py  utilities.py  xml_cleaned.py
xsd_data/: __init__.py  qb_classes.py  qb_ops_classes.py  qb_so_classes.py
(+344 files in other folders)
