[metadata]
name = quickbooks_desktop
version = 1.0.1
author = Jared Self
author_email = jared@quickbooksgg.com
description = QuickBooks Desktop package for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/selfjared1/quickbooks_desktop
project_urls =
    Bug Tracker = https://github.com/selfjared1/quickbooks_desktop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src